fix hightlighter box label's line-height on mobile

--- a/src/components/HelFormFields/NewEvent.scss
+++ b/src/components/HelFormFields/NewEvent.scss
@@ -3,3 +3,7 @@
     left: -5px;
     top: -10px;
 }
+
+.event-languages-label {
+    line-height: 1;
+}
