--- a/src/views/Editor/index.scss
+++ b/src/views/Editor/index.scss
@@ -37,6 +37,7 @@
         label {
             font-size: 24px;
             margin-bottom: 0;
+            line-height: 1.5;
         }
 
         .spread-evenly,
